--- a/WebRoot/WEB-INF/classes/db.properties
+++ b/WebRoot/WEB-INF/classes/db.properties
@@ -1,10 +1,10 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql:///test
+jdbc.jdbcUrl=jdbc:mysql:///ipms
 jdbc.user=root
-jdbc.password=root
+jdbc.password=123456
 
 
 jdbc1.driverClass=com.mysql.jdbc.Driver
-jdbc1.jdbcUrl=jdbc:mysql:///test
+jdbc1.jdbcUrl=jdbc:mysql:///ipms
 jdbc1.user=root
-jdbc1.password=root
+jdbc1.password=123456
